# axi_da_transform_demos

./: .gitignore  DAT2_Week_2_2.ipynb  DAT2_Week_3_1.ipynb  DAT2_Week_3_2.ipynb  DAT2_Week_4_1.ipynb  DAT2_Week_4_2.ipynb  DAT2_Week_5_1.ipynb  DAT2_Week_5_2.ipynb  DAT2_Weeks_1_4_Review_Session_13Jun2022.ipynb  pyproject.toml
data/format_examples/: auto-mpg.csv  auto-mpg.json  auto-mpg.tsv
