[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["JP Hwang <me@jphwang.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
pandas = "^1.4.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
